I made the tipbox visible at all times.  I need to fix the Resume Pages to handle the Work and Educ History.

--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -618,6 +618,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1rem;
 }
 
+.ml-96 {
+  margin-left: 24rem;
+}
+
 .mt-0\.5 {
   margin-top: 0.125rem;
 }
@@ -764,16 +768,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 90%;
 }
 
-.w-1\/2 {
-  width: 50%;
-}
-
 .w-1\/6 {
   width: 16.666667%;
 }
 
 .w-1\/3 {
   width: 33.333333%;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-2\/3 {
@@ -1454,6 +1458,14 @@ Ensure the default browser behavior of the `hidden` attribute.
     float: left;
   }
 
+  .md\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
   .md\:flex {
     display: flex;
   }
@@ -1502,6 +1514,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     gap: 12rem;
   }
 
+  .md\:gap-10 {
+    gap: 2.5rem;
+  }
+
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -1536,22 +1552,18 @@ Ensure the default browser behavior of the `hidden` attribute.
     display: grid;
   }
 
-  .lg\:w-1\/2 {
-    width: 50%;
-  }
-
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
 
 @media (min-width: 1280px) {
-  .xl\:block {
-    display: block;
-  }
-
   .xl\:flex {
     display: flex;
+  }
+
+  .xl\:grid {
+    display: grid;
   }
 
   .xl\:w-1\/2 {
